# smart-ring

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  RESEARCH.md  ROADMAP.md  TASKS.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.sh
api/: Dockerfile  main.py  requirements.txt  upsert.py
collector/: analytics-wrapper.py  analytics.py  collector-wrapper.py  first_contact.py  requirements.txt  ring_client.py  sync_request_poller.py  sync_ring.py  test_open_questions.py  test_sync_readonly.py
collector/analytics/: __init__.py  __main__.py  circadian.py  current_status.py  daily_activity.py  data_quality.py  db.py  dedupe.py  helpers.py  hrv.py  main.py  readiness.py  rhr.py  sleep.py  stress.py
collector/jobs/: __init__.py  analytics.py  base.py  ring_sync.py
collector/protocol/: __init__.py  connect.py  db.py  scanner.py  time_sync.py
collector/protocol/parsers/: _big_data.py  goals.py  hr.py  hrv.py  sleep.py  spo2.py  steps.py  stress.py  temp.py
dashboard/: index.html  manifest.webmanifest  sw.js
db/: init.sql
docs/: CLEANUP_PLAN.md  DASHBOARD_REWRITE_PLAN.md  HRV-RECOVERY-SCORING-DEEP-DIVE.md  PACKAGED_APP.md  PARSER_CLEANUP_PLAN.md  PWA_PLAN.md  RESEARCH.md  RING_BEHAVIOR.md  ROADMAP.md
scripts/: gen_icons.py
tests/: conftest.py  test_current_status.py  test_dedupe.py  test_mobile_sync.py  test_readiness_freeze.py  test_time_sync_bcd.py  test_trap_score.py
