[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-ring-collector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "bleak>=0.21",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "colmi_r02_client @ git+https://github.com/tahnok/colmi_r02_client.git",
]

[tool.setuptools.packages.find]
include = ["collector*"]
